# exfemus

./: README.md  configure.sh  test_fsi.sh  test_fsi_gen.sh
USER_APPL/MESH/: heart_short.med  pressbox.med  pressbox_fine.med  pressbox_gen.med  turek.med  turek_fine.med  turek_gen.med  turekf.med  turekf_fine.med  turekf_gen.med  ventr_doub_doub_sempl.med
USER_APPL/gencase/: Makefile
USER_APPL/gencase/src/: MGGenCase.C  MGGenCase_conf.h  MGUtils.h  gencase_main.C  salome_io.C
contrib/Libmesh_cpp/: Debug.C  Debug.h  EquationSystemsExtended.C  EquationSystemsExtended.h  LIBMESH.C  LIBMESH.h  LibMeshFunction.C  LibMeshFunction.h  LibMeshUtil.C  LibMeshUtil.h  ParallelMeshExtended.C  ParallelMeshExtended.h  Timer.h  conf.h
contrib/Myapplication/: math_component.py  parse_result  parse_type_result
contrib/Myapplication/MATHEMATICS_SRC/: Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.ac  libtool  mathematics_config.h  mathematics_config.h.in  stamp-h1
contrib/Myapplication/MATHEMATICS_SRC/adm_local/: check_aster.m4  enable_pthreads.m4  make_common_starter.am
contrib/Myapplication/MATHEMATICS_SRC/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1
contrib/Myapplication/MATHEMATICS_SRC/idl/: MATHEMATICS.hh  MATHEMATICSDynSK.cc  MATHEMATICSSK.cc  Makefile  Makefile.am  Makefile.in  libSalomeIDLMATHEMATICS.la  libSalomeIDLMATHEMATICS_la-MATHEMATICSSK.lo
contrib/Myapplication/MATHEMATICS_SRC/idl/.deps/: libSalomeIDLMATHEMATICS_la-MATHEMATICSSK.Plo
contrib/Myapplication/MATHEMATICS_SRC/idl/.libs/: libSalomeIDLMATHEMATICS.lai
contrib/Myapplication/MATHEMATICS_SRC/resources/: MATHEMATICSCatalog.xml  Makefile  Makefile.am  Makefile.in
contrib/Myapplication/MATHEMATICS_SRC/src/: Makefile  Makefile.am  Makefile.in
contrib/Myapplication/MATHEMATICS_SRC/src/MATH/: MATH_i.cxx  MATH_i.hxx  Makefile  Makefile.am  Makefile.in  libMATHEngine_la-MATH_i.lo
contrib/Myapplication/MATHEMATICS_SRC/src/MATH/.deps/: libMATHEngine_la-MATH_i.Plo
contrib/Myapplication/MATHEMATICS_SRC/src/MATH/.libs/: libMATHEngine.la  libMATHEngine.lai  libMATHEngine.so.0.0.0T
contrib/Myapplication/appli_math/: CatalogResources.xml  SalomeApp.xml  config_appli.xml  traceExec_newSchema_1
contrib/ioformat/: MeshVTK.C  MeshXDMF.C
contrib/laspack/: Makefile  itersolv.c  itersolv.h  laspack_config.h  laspack_config.h~  rtc.h
contrib/matrix/: dense_matrixM.h  dense_vectorM.h  distributed_vectorM.h  laspack_vectorM.h  linear_solverM.C  linear_solverM.h  numeric_vectorM.C  numeric_vectorM.h  petsc_linear_solverM.C  petsc_linear_solverM.h  petsc_matrixM.C  petsc_vectorM.C  petsc_vectorM.h  sparse_MmatrixM.C  sparse_MmatrixM.h  sparse_matrixM.C  sparse_matrixM.h
contrib/parallel/: parallelM.h  parallel_communicator_specializationsM  parallel_implementationM.h  parallel_objectM.h
contrib/vof/: advection2D.C  advection3D.C  reconst2D.C  reconst3D.C  vofstuff.C
include/: EquationSystemsExtendedM.h  FEMUS.h  InterfaceFunctionM.h  MGCasts.h  MGEquationsSystem.h  MGFE.h  MGMesh.h  MGSolverALFA.h  MGSolverBase.h  MGSolverDA.h  MGSolverNSAD.h  MGSolverNSC.h  MGSolverSM.h  MGSolverSMP.h  MGSolverTC.h  MGSolverTF.h  MGSystem.h  MGTimeLoop.h  MGUtils.h  MeshExtended.h
src/: EquationSystemsExtendedM.C  FEMUS.C  InterfaceFunctionM.C  MGEquationsSystem.C  MGFE.C  MGFemusInit.C  MGMesh.C  MGSolverBase.C  MGSolverDA.C  MGSystem.C  MGTimeLoop.C  MGUtils.C  MeshExtended.C
template_appl/femlcore/: Makefile  action.sh  automatic.sh  begin.sh
template_appl/femlcore/DATA/: Domain_conf.h  Equations_conf.h  MGFE_conf.h  MGSclass_conf.h  Printinfo_conf.h  Solverlib_conf.h  case1.xml  param_files_msh1.in  param_files_msh2.in  parameters.in
template_appl/fsi/: Makefile  change_test.sh
template_appl/fsi_old/: Makefile
template_appl/gencase/: .directory  Makefile
template_appl/libmesh/: Makefile
template_appl/math_coupled/: Makefile
template_appl/math_coupled/SRC/: .directory  BCTypeshxx  CMakeLists.txt  Debug.cxx  Debug.hxx  EquationSystemsExtended.C  EquationSystemsExtended.h  EquationSystemsExtended.hxx  EquationSystemsExtendedcxx  FEMUS.C  FEMUS.cxx  FEMUS.h  FEMUS.hxx  FEMUS_BC.C  Femus_BCTypes.h  LIBMESH.cxx  LIBMESH.hxx  LibMeshFunction.C  LibMeshFunction.cxx  LibMeshFunction.h  LibMeshFunction.hxx  LibMeshUtil.C  LibMeshUtil.cxx  LibMeshUtil.h  LibMeshUtil.hxx  ParallelMeshExtended.C  ParallelMeshExtended.cxx  ParallelMeshExtended.h  _LibMeshProblem.cxx  _LibMeshProblem.hxx  _LibMeshProblemC  _LibMeshProblemh  conf.hxx  main.C
template_appl/nse/: Makefile
template_appl/tbcont/: Makefile
template_appl/turb-ck/: Makefile
test/: test_fsi.sh  test_lapli.sh  test_tbcont.sh  test_turb-ckw.sh  test_vof.sh  test_vofsi.sh
(+343 files in other folders)
